--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="about.html">About</a>
                     </li>
                     <li>
                         <a href="sponsors.html">Sponsors</a>
@@ -91,7 +91,7 @@
                 <h1>Where the future is born.</h1>
                 <hr>
                 <p id="tl">Belfast, 12th-13th February 2016</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">TICKETS COMING SOON</a>
+                <a href="" id="home_btn_main" class="btn btn-primary btn-xl page-scroll">TICKETS COMING SOON</a>
             </div>
         </div>
     </header>
@@ -100,10 +100,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">The most inspirational conference. Ever.</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                    <p id="homepara">Future2016 was born out of frustration at the lack of technology/STEM events aimed specifically at young people. By introducing a 30 hour hackathon and conference jam-packed with inspirational speakers from the tech and STEM worlds, we aim to inspire the next generation of STEM leaders.</p>
+                    <a href="about.html" class="btn btn-default btn-xl">Learn more</a>
                 </div>
             </div>
         </div>
