--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>FUTURE 2016</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
