--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"><span class="logo">FUTURE<span id="logo">2016</a>
+                <a class="navbar-brand page-scroll" href="#page-top"><span>FUTURE</span> 2016</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar">
                     <li>
-                        <a class="page-scroll" href="about.html">About</a>
+                        <a  href="about.html">About</a>
                     </li>
                     <li>
                         <a href="sponsors.html">Sponsors</a>
